@@ -1,3 +1,3 @@
-EBUILD clementine-9999.ebuild 3429 RMD160 45ff73034f81576764f15f38c4c07176040b572c SHA1 336227eb8d3660598dcfa21d1c67af8e2335e276 SHA256 4e53f54de59fd8260f759cd28cb553672b26e8b11b24184a6f81403c29d6e130
-MISC ChangeLog 4102 RMD160 39ba7a9f34b0a1b2c2a3091f6a854d2620aa5ac9 SHA1 d1abcaa934263199d0cd83f34258e157a2fd34a5 SHA256 80cdb92bbe8de2f2972ed051c85549d81bb4ee4b9f8f9bdab44f4baa0c3bb8ce
-MISC metadata.xml 966 RMD160 64bcf63e40733b8607b3dbac91b31a5f4200c620 SHA1 56b7ef47faf3eb8e76992c89bd89ded98f2ea413 SHA256 f8e4ee6d5a6fcbdc174c15ae9511fffd616bded3d10537fa80fd5bbe7539fea5
+EBUILD clementine-9999.ebuild 3304 RMD160 e0b70d7630482bf7e48cd68faf3977025ab05959 SHA1 a46a5424c431b28233a4642a28668505382fa7d4 SHA256 7876363626ca289c901c47325f5296335893b53db76213d6a670ba3fabed1bd1
+MISC ChangeLog 4240 RMD160 94e4711b982d3d635a53d23025d8d3468633df56 SHA1 5953edc02e426cb3f0be672853e06bd948e3bdc7 SHA256 232cd449e5f66390d1e2492f921e8f6bd6f3fc79849843f177910f8be6e6b845
+MISC metadata.xml 860 RMD160 9bf145eb6ccdebbe098fdd7f69631cdf2148c0a4 SHA1 a5049821d75d8b47e7981c6f1f3328f4cb5b0f60 SHA256 ed10a862917ee585bb65484d11670d9fb9eaebff01d7ee9189bef68e636473e9
