@@ -7,7 +7,6 @@
     <name>Nikoli</name>
   </maintainer>
   <use>
-    <flag name="archive">Enable support for loading scripts from archives (.clem or .tar.gz files)</flag>
     <flag name="ayatana">Build in support for Ayatana notification using the libindicate-qt plugin.</flag>
     <flag name="ios">Enable support for iPod Touch, iPhone, iPad</flag>
     <flag name="lastfm">Use liblastfm for fetching song info, scrobbling and radio streams</flag>
