@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Aug 2011; Nikoli <nikoli@lavabit.com> clementine-9999.ebuild,
+  metadata.xml:
+  upstream removed scripting, fix deps for USE remote
+
   03 Aug 2011; Nikoli <nikoli@lavabit.com> clementine-9999.ebuild:
   upstream migrated to git
 
